--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,13 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+
+nav:
+  - title: "Home"
+    url: "/"
+  - title: "CV"
+    url: "/cv/"
+
+  
+
+  
