Convert research pages to a Jekyll collection; add archives & index

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,20 @@ description: "Experiments, notes and projects."
 plugins:
   - jekyll-feed
   - jekyll-seo-tag     # optional—keep if you want it
+  - jekyll-archives
 
 sass:
   style: compressed    # keep CSS tiny
+
+collections:
+  research:
+    output: true
+    permalink: /research/:slug/
+
+jekyll-archives:
+  enabled:
+    - categories
+    - tags
+  layouts:
+    category: archive
+    tag: archive  
