--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ sass:
 collections:
   research:
     output: true
-    permalink: /_research/:categories/:slug/
+    permalink: /_research/:slug/
 
 jekyll-archives:
   enabled:
