Add index pages for various topics in notes section

--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,9 @@ collections:
   research:
     output: true
     permalink: /_research/:slug/
+  notes:
+    output: true
+    permalink: /_notes/:slug/  
 
 jekyll-archives:
   enabled:
